--- a/cv_HW/cv2_HW3.ipynb
+++ b/cv_HW/cv2_HW3.ipynb
@@ -119,6 +119,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equalHist_by_channel = [img[..., 0], img[..., 1], img[..., 2]]\n",
+    "equalHist_by_channel = [cv2.equalizeHist(i) for i in equalHist_by_channel]\n",
+    "img_bgr_equal = np.stack(equalHist_by_channel, axis=-1)\n",
+    "\n",
+    "img_hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "img_hsv[..., -1] = cv2.equalizeHist(img_hsv[..., -1])\n",
+    "img_hsv_equal = cv2.cvtColor(img_hsv, cv2.COLOR_HSV2BGR)\n",
+    "\n",
+    "img_bgr_equalHist = np.hstack((img, img_bgr_equal, img_hsv_equal))\n",
+    "\n",
+    "while(1):\n",
+    "    cv2.imshow('hist_R_H', img_bgr_equalHist)\n",
+    "    \n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
