--- a/DL/DL_HW1.ipynb
+++ b/DL/DL_HW1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "seventh-pollution",
+   "id": "naughty-algebra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "informational-friend",
+   "execution_count": 6,
+   "id": "sound-entity",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 9, 9, 32)          320       \n",
+      "=================================================================\n",
+      "Total params: 320\n",
+      "Trainable params: 320\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "classifier = Sequential()\n",
-    "classifier.add(Convolution2D(1, 28, 28, ))"
+    "#28*28單通道\n",
+    "shape = (28, 28, 1)\n",
+    "#32張 3*3kernel\n",
+    "classifier.add(Convolution2D(32, 3, 3, input_shape = shape))\n",
+    "\n",
+    "print(classifier.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "guided-criticism",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_2 (InputLayer)         [(None, 784)]             0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 784)               615440    \n",
+      "=================================================================\n",
+      "Total params: 615,440\n",
+      "Trainable params: 615,440\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifier = Sequential()\n",
+    "shape = Input(shape = (28*28, ))\n",
+    "lay = Dense(28*28)(shape)\n",
+    "model = Model(inputs = shape, outputs = lay)\n",
+    "\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "featured-entrance",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
